--- a/home.css
+++ b/home.css
@@ -27,10 +27,7 @@ ul.topnav li.right {float: right;}
   ul.topnav li {float: none;}
 }
 
-iframe:focus {
-  outline: none;
-}
-
-iframe[seamless] {
-  display: block;
+iframe {
+  width: 100%;
+  height: 70%;
 }
